Lesson #5 - Добавление Bootstrap 4 и фото на сайт

--- a/GoshaDudarExampleShop/Views/Car/List.cshtml
+++ b/GoshaDudarExampleShop/Views/Car/List.cshtml
@@ -1,11 +1,19 @@
-﻿<h1>All cars</h1>
+﻿@using System.Globalization
+<h1>All cars</h1>
 <h3>@Model.currentCategory</h3>
-@{
-    foreach (var car in Model.AllCars)
-    {
-        <div>
-            <h2>Model: @car.Name</h2>
-            <p>Price: @car.Price.ToString("C0")</p>
-        </div>
+<div class="row mt-5 mb-2">
+    @{
+        var nfi = new CultureInfo( "en-US", false ).NumberFormat;
+        foreach (var car in Model.AllCars)
+        {
+            <div class="col-lg-4">
+                <img class="img-thumbnail" src="@car.ImgPath" alt="@car.Name"/>
+                <h2>Model: @car.Name</h2>
+                <p>Price: @car.Price.ToString("C0", nfi)</p>
+                <p>
+                    <a class="btn btn-warning" href="#">More</a>
+                </p>
+            </div>
+        }
     }
-}
+</div>
