Lesson #6 - Фреймворк Entity. Работа с базой данных

--- a/GoshaDudarExampleShop/Views/Car/List.cshtml
+++ b/GoshaDudarExampleShop/Views/Car/List.cshtml
@@ -10,6 +10,7 @@
                 <img class="img-thumbnail" src="@car.ImgPath" alt="@car.Name"/>
                 <h2>Model: @car.Name</h2>
                 <p>Price: @car.Price.ToString("C0", nfi)</p>
+                <p>@car.ShortDesc</p>
                 <p>
                     <a class="btn btn-warning" href="#">More</a>
                 </p>
